unpackaged/main/default/objects/appirio_core__Locale_Label__c/appirio_core__Locale_Label__c.object-meta.xml
<CustomObject>
    <description>An object to support language translation for certain non Visualforce components within FinancialForce PSA.</description>
    <label>Deprecated:Locale Label</label>
    <nameField>
        <label>Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locale Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>