unpackaged/main/default/objects/appirio_core__Locale_Label__c/fields/appirio_core__Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>controls</fullName>
            </value>
            <value>
                <fullName>formatters</fullName>
            </value>
            <value>
                <fullName>planner</fullName>
            </value>
            <value>
                <fullName>SharedResources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>