unpackaged/main/default/objects/appirio_core__Locale_Label__c/fields/appirio_core__Is_Framework_Bundle__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Is_Framework_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Framework Bundle</label>
    <type>Checkbox</type>
</CustomField>