unpackaged/main/default/objects/appirio_core__Locale_Label__c/fields/appirio_core__Locale__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Locale__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>es_ES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>