unpackaged/main/default/objects/appirio_core__Locale_Label__c/fields/appirio_core__Value__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>