unpackaged/main/default/objects/appirio_core__Locale_Label__c/validationRules/appirio_core__Check_Spaces.validationRule-meta.xml
<ValidationRule>
    <fullName>appirio_core__Check_Spaces</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Name , " ")</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name cannot contain spaces</errorMessage>
</ValidationRule>