unpackaged/main/default/objects/appirio_core__Locale_Label__c/listViews/appirio_core__All.listView-meta.xml
<ListView>
    <fullName>appirio_core__All</fullName>
    <columns>appirio_core__Locale__c</columns>
    <columns>appirio_core__Bundle_Name__c</columns>
    <columns>NAME</columns>
    <columns>appirio_core__Value__c</columns>
    <columns>appirio_core__Is_Framework_Bundle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>